<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dte</groupId>
	<artifactId>employeme</artifactId>
	<version>1.0.6</version>

	<properties>
		<shade.base>dte.employme.shaded</shade.base>
	</properties>
	
	<build>
		<finalName>EmployMe ${project.version}</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<target>8</target>
					<source>8</source>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
					<relocations>

						<relocation>
							<pattern>co.aikar.commands</pattern>
							<shadedPattern>${shade.base}.acf</shadedPattern>
						</relocation>

						<relocation>
							<pattern>co.aikar.locales</pattern>
							<shadedPattern>${shade.base}.locales</shadedPattern>
						</relocation>

						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>${shade.base}.bstats</shadedPattern>
						</relocation>

						<relocation>
							<pattern>dte.modernjavaplugin</pattern>
							<shadedPattern>${shade.base}.modernjavaplugin</shadedPattern>
						</relocation>

						<relocation>
							<pattern>com.github.stefvanschie.inventoryframework</pattern>
							<shadedPattern>${shade.base}.inventoryframework</shadedPattern>
						</relocation>

						<relocation>
							<pattern>de.tr7zw</pattern>
							<shadedPattern>${shade.base}.nbtapi</shadedPattern>
						</relocation>

						<relocation>
							<pattern>com.cryptomorin.xseries</pattern>
							<shadedPattern>${shade.base}.xseries</shadedPattern>
						</relocation>

						<relocation>
							<pattern>dte.spigotconfiguration</pattern>
							<shadedPattern>${shade.base}.spigotconfiguration</shadedPattern>
						</relocation>

					</relocations>

					<filters>
						<filter>
							<artifact>com.github.cryptomorin:XSeries</artifact>
							<includes>
								<include>com/cryptomorin/xseries/XMaterial*</include>
								<include>com/cryptomorin/xseries/XTag*</include>
								<include>com/cryptomorin/xseries/XEnchantment*</include>
							</includes>
						</filter>
					</filters>

				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<repositories>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository>
			<id>aikar</id>
			<url>https://repo.aikar.co/content/groups/aikar/</url>
		</repository>

		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
			<layout>default</layout>
		</repository>

		<repository>
			<id>phoenix</id>
			<url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
		</repository>

		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>

	</repositories>


	<dependencies>

		<!-- Spigot 1.14 -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.14.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- Vault -->
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- ACF -->
		<dependency>
			<groupId>co.aikar</groupId>
			<artifactId>acf-bukkit</artifactId>
			<version>0.5.0-SNAPSHOT</version>
		</dependency>

		<!-- Metrics -->
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.1</version>
		</dependency>

		<!-- ModernJavaPlugin -->
		<dependency>
			<groupId>com.github.DavidTheExplorer</groupId>
			<artifactId>ModernJavaPlugin</artifactId>
			<version>1.1.0</version>
		</dependency>

		<!-- InventoryFramework -->
		<dependency>
			<groupId>com.github.stefvanschie.inventoryframework</groupId>
			<artifactId>IF</artifactId>
			<version>0.10.8</version>
		</dependency>

		<!-- Item-NBT-API -->
		<dependency>
			<groupId>de.tr7zw</groupId>
			<artifactId>item-nbt-api-plugin</artifactId>
			<version>2.11.1</version>
		</dependency>

		<!-- XSeries -->
		<dependency>
			<groupId>com.github.cryptomorin</groupId>
			<artifactId>XSeries</artifactId>
			<version>9.1.0</version>
		</dependency>

		<!-- Spigot Configuration -->
		<dependency>
			<groupId>dte</groupId>
			<artifactId>spigotconfiguration</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<!-- MMOItems -->
		<dependency>
			<groupId>net.Indyuce</groupId>
			<artifactId>MMOItems-API</artifactId>
			<version>6.9.2-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- MythicLib - Required by MMOItems -->
		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>MythicLib-dist</artifactId>
			<version>1.5.1-20230201.195713-8</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>
</project>